Add weight clustering implementation using compression API. It requires clustering modules in tfmot weight clustering implementaion.
PiperOrigin-RevId: 338317090

--- a/tensorflow_model_optimization/python/core/common/keras/compression/algorithms/BUILD
+++ b/tensorflow_model_optimization/python/core/common/keras/compression/algorithms/BUILD
@@ -1,4 +1,7 @@
-package(default_visibility = ["//visibility:private"])
+package(default_visibility = [
+    "//tensorflow_model_optimization/python/core/common/keras/compression:__subpackages__",
+    "//third_party/tensorflow_model_optimization/python/examples/compression:__subpackages__",
+])
 
 licenses(["notice"])
 
@@ -41,5 +44,29 @@ py_test(
         ":different_training_and_inference",
         # numpy dep1,
         # tensorflow dep1,
+    ],
+)
+
+py_library(
+    name = "weight_clustering",
+    srcs = ["weight_clustering.py"],
+    srcs_version = "PY3",
+    deps = [
+        # tensorflow dep1,
+        "//tensorflow_model_optimization/python/core/clustering/keras:clustering_centroids",
+        "//tensorflow_model_optimization/python/core/clustering/keras:clustering_registry",
+        "//tensorflow_model_optimization/python/core/common/keras/compression:algorithm",
+    ],
+)
+
+py_test(
+    name = "weight_clustering_test",
+    timeout = "eternal",
+    srcs = ["weight_clustering_test.py"],
+    python_version = "PY3",
+    deps = [
+        ":weight_clustering",
+        # tensorflow dep1,
+        "//tensorflow_model_optimization/python/core/clustering/keras:cluster_config",
     ],
 )
